Added RWB to Survey Form project

--- a/Responsive Web Design Projects/Build a Survey Form/surveyForm.html
+++ b/Responsive Web Design Projects/Build a Survey Form/surveyForm.html
@@ -13,7 +13,7 @@
                 Let us know hew we can improve freeCodeCamp
             </p>
 
-            <form id="survey-form">
+            <form id="survey-form" action="http://www.github.com/jrozbicki" target="_blank">
                 <div class="row">
                     <div class="label">
                         <label for="name" id="name-label">*Name</label>
@@ -59,7 +59,7 @@
 
                 <div class="row">
                     <div class="label">
-                        <label id="recomendation-label">* How likely is that you would recommend freeCodeCapm to a friend?</label>
+                        <label id="recomendation-label">* How likely is that you would recommend freeCodeCamp to a friend?</label>
                     </div>
                     <div class="rightCol">
                         <ul>
